--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,14 @@
         <version>5.11.2</version>
         <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>jakarta.validation</groupId>
+          <artifactId>jakarta.validation-api</artifactId>
+          <version>3.1.0</version>
+      </dependency>
+
   </dependencies>
+
     <build>
         <plugins>
             <plugin>
